# onebowl.ai

./: .env.example  .gitignore  Dockerfile  README.md  app.py  cache.py  config.py  deploy.sh  fly.toml  models.py  providers.py  pyproject.toml  recipe_analyzer.py  recipe_fetcher.py
static/: style.css
templates/: base.html  error.html  index.html  recipe.html
